# wezterm

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  Doxyfile.rust  Justfile  WEZTERM_AI_MODULE_DESIGN.md  build-all.ps1  clippy.toml  install-verification.ps1  uninstall.ps1  wezterm-utils.lua
.cargo/: config.toml
.claude/context/: context-index.json  quick-context.md  wezterm-architecture-knowledge.md  wezterm-context-2025-01-30.md
.github/workflows/: fmt.yml  gen_centos9_continuous.yml  gen_centos9_tag.yml  gen_debian11.yml  gen_debian11_continuous.yml  gen_debian11_tag.yml  gen_debian12_continuous.yml  gen_debian12_tag.yml  gen_fedora39.yml  gen_fedora39_continuous.yml  gen_fedora39_tag.yml  gen_fedora40.yml  gen_fedora40_continuous.yml  gen_fedora40_tag.yml  gen_fedora41_continuous.yml  gen_fedora41_tag.yml  gen_macos_continuous.yml  gen_macos_tag.yml  gen_ubuntu20.04.yml  gen_ubuntu20.04_continuous.yml  gen_ubuntu20.04_tag.yml  gen_ubuntu22.04_continuous.yml  gen_ubuntu22.04_tag.yml  gen_ubuntu24.04_continuous.yml  gen_ubuntu24.04_tag.yml  gen_windows.yml  gen_windows_continuous.yml  gen_windows_tag.yml  nightly-docs.yml  nix-update-flake.yml  nix.yml  (+6 more)
ci/: doxygen-rust-filter.sh
docs/: developer-tooling.md
wezterm-fs-explorer/: .gitignore  BUILD_INSTRUCTIONS.md  CHANGELOG.md  Cargo.toml  GETTING_STARTED.md  INDEX.md  LICENSE  PROJECT_SUMMARY.md  QUICKREF.md  README.md  TESTING.md  WEZTERM_INTEGRATION.md  build.ps1  check.bat
wezterm-fs-explorer/examples/: wezterm-config-example.lua
wezterm-fs-explorer/src/: app.rs  error.rs  file_entry.rs  git_status.rs  icons.rs  ipc_client.rs  keybindings.rs  main.rs  operations.rs  ui.rs
wezterm-watch/: Cargo.toml  IMPLEMENTATION.md  PERFORMANCE.md  QUICKSTART.md  README.md  SUMMARY.md  build.ps1  wezterm-integration.lua
wezterm-watch/src/: git.rs  main.rs  output.rs  watcher.rs
(+6 files in other folders)
