[workspace]

[package]
name = "wezterm-fs-explorer"
version = "0.1.0"
edition = "2021"
authors = ["David Martel <david@example.com>"]
description = "High-performance filesystem explorer for WezTerm"
license = "MIT"
repository = "https://github.com/wez/wezterm"

[[bin]]
name = "wezterm-fs-explorer"
path = "src/main.rs"

[dependencies]
# Terminal UI
crossterm = "0.27"
ratatui = "0.26"

# Filesystem operations
notify = "6.1"
walkdir = "2.4"

# Git integration
git2 = { version = "0.18", default-features = false }

# Utilities
chrono = "0.4"
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unicode-width = "0.1"

# IPC and async support
tokio = { version = "1.35", features = ["sync", "rt", "rt-multi-thread", "macros", "io-util", "net"] }
named_pipe = "0.4"
clap = { version = "4.4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.release-fast]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[dev-dependencies]
tempfile = "3.8"