[package]
name = "wezterm-watch"
version = "0.1.0"
edition = "2021"
authors = ["David Martel"]
description = "High-performance file watcher with Git integration for WezTerm"
license = "MIT"

[[bin]]
name = "wezterm-watch"
path = "src/main.rs"

[dependencies]
notify = "6.1"
notify-debouncer-full = "0.3"
git2 = "0.20"
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive", "cargo"] }
anyhow = "1.0"
crossbeam-channel = "0.5"
colored = "2.1"
ignore = "0.4"
walkdir = "2.5"